<resources>
    <string name="app_name">El Tamalito</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">El Tamalito</string>
    <string name="nav_header_subtitle">Tamales y Chilaquiles</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Soporte">Atención y Soporte</string>


    <string name="mesa_1">Mesa #1</string>
    <string name="mesa_2">Mesa #2</string>
    <string name="mesa_3">Mesa #3</string>
    <string name="mesa_4">Mesa #4</string>
    <string name="mesa_5">Mesa #5</string>
    <string name="mesa_6">Mesa #6</string>
    <string name="mesa_7">Mesa #7</string>
    <string name="menu">Menú</string>
    <string name="menu_tamales">Tamales</string>
    <string name="menu_atoles">Atoles y Café</string>
    <string name="menu_chilaquiles">Chilaquiles</string>
    <string name="menu_pozole">Pozole</string>
    <string name="menu_pancita">Pancita</string>
    <string name="menu_huaraches">Huaraches</string>
    <string name="menu_tacos">Tacos Dorados</string>
    <string name="menu_extras">Extras</string>
    <string name="menu_refrescos">Refrescos</string>
    <string name="menu_pambazos">Pambazos</string>
    <string name="menu_mixiotes">Mixiotes</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="price_verde">$15.00</string>
    <string name="price_mole">$15.00</string>
    <string name="price_rajas">$15.00</string>
    <string name="price_pasas">$15.00</string>
    <string name="price_pina">$15.00</string>
    <string name="price_champi">$20.00</string>
    <string name="price_quesozar">$20.00</string>
    <string name="price_bolillo">$5.00</string>
    <integer name="price_verde">15</integer>
    <integer name="price_mole">15</integer>
    <integer name="price_rajas">15</integer>
    <integer name="price_pasas">15</integer>
    <integer name="price_pina">15</integer>
    <integer name="price_champi">20</integer>
    <integer name="price_quesozar">20</integer>
    <integer name="price_bolillo">5</integer>
    <string name="price_chila_sencillos">$45.00</string>
    <string name="price_chila_pollo">$90.00</string>
    <string name="price_chila_huevo">$70.00</string>
    <string name="price_chila_bistec">$90.00</string>
    <string name="price_crema">$15.00</string>
    <integer name="price_chila_sencillos">45</integer>
    <integer name="price_chila_pollo">90</integer>
    <integer name="price_chila_huevo">70</integer>
    <integer name="price_chila_bistec">90</integer>
    <integer name="price_crema">15</integer>
    <string name="price_huara_sencillos">$30.00</string>
    <string name="price_huara_pollo">$80.00</string>
    <string name="price_huara_huevo">$70.00</string>
    <string name="price_huara_bistec">$80.00</string>
    <integer name="price_huara_sencillos">30</integer>
    <integer name="price_huara_pollo">80</integer>
    <integer name="price_huara_huevo">70</integer>
    <integer name="price_huara_bistec">80</integer>
    <string name="price_cafecrema_chico">$15.00</string>
    <string name="price_cafecrema_mediano">$20.00</string>
    <string name="price_cafecrema_grande">$35.00</string>
    <integer name="price_cafecrema_chico">15</integer>
    <integer name="price_cafecrema_mediano">20</integer>
    <integer name="price_cafecrema_grande">35</integer>
    <string name="price_cafe_chico">$10.00</string>
    <string name="price_cafe_mediano">$13.00</string>
    <string name="price_cafe_grande">$25.00</string>
    <integer name="price_cafe_chico">10</integer>
    <integer name="price_cafe_mediano">13</integer>
    <integer name="price_cafe_grande">25</integer>
    <string name="price_atole_chico">$15.00</string>
    <string name="price_atole_mediano">$20.00</string>
    <string name="price_atole_grande">$35.00</string>
    <integer name="price_atole_chico">15</integer>
    <integer name="price_atole_mediano">20</integer>
    <integer name="price_atole_grande">35</integer>
    <string name="price_pozole">$80.00</string>
    <integer name="price_pozole">80</integer>
    <string name="price_pancita">$100.00</string>
    <integer name="price_pancita">100</integer>
    <string name="price_mixiote">$80.00</string>
    <integer name="price_mixiote">80</integer>
    <string name="price_pambazo">$30.00</string>
    <integer name="price_pambazo">30</integer>
    <string name="price_tacos">$50.00</string>
    <integer name="price_tacos">50</integer>

</resources>